@@ -41,6 +41,9 @@ Minor changes:
 * Tom Chiverton suggested a clarification to the manual page for
   "obnam mount" to say that each generation is a subdirectory.
 
+* David Fries changed restore to set the group ownership if possible
+  even when not root.  No warnings are issued if the attempt fails.
+
 Bug fixes:
 
 * The Obnam SFTP plugin would loop infinitely if it lost the
